Update GitHub Pages workflow to include feature/openai-enrichment branch

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -3,6 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
+      - feature/openai-enrichment
       - feature/github-pages-deployment
       - main
   workflow_dispatch:
