Add Pharmacy filter and improve UI layout
- Add Pharmacy service type filter checkbox
- Fix word boundary matching to prevent false positives (e.g., 'oral' in 'behavioral')
- Reorganize layout: zipcode/radius on top row, filters/search button on second row
- Fix search button sizing and centering for consistent display
- Update CSV transformation to include pharmacy field
- Centers with empty types now always appear in filtered results

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -42,6 +42,7 @@ jobs:
           npm run build
         env:
           NODE_ENV: production
+          VITE_GA_MEASUREMENT_ID: ${{ secrets.VITE_GA_MEASUREMENT_ID }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
